fix job details not showing on click

--- a/stylesheets/992-1199.css
+++ b/stylesheets/992-1199.css
@@ -1635,6 +1635,9 @@ textarea:focus {
   overflow: hidden;
   transition: max-height 0.2s ease-out;
 }
+.jobs_zone_2 .element .panel.open {
+  max-height: none;
+}
 /* line 1607, ../sass/992-1199.scss */
 .jobs_zone_2 .element .panel .text_montserrat {
   font-size: 0.9em;
