--- a/stylesheets/inf576.css
+++ b/stylesheets/inf576.css
@@ -1612,6 +1612,9 @@ textarea:focus {
   overflow: hidden;
   transition: max-height 0.2s ease-out;
 }
+.jobs_zone_2 .element .panel.open {
+  max-height: none;
+}
 /* line 1560, ../sass/inf576.scss */
 .jobs_zone_2 .element .panel .text_montserrat {
   font-size: 0.9em;
